# poloka-simphot

./: INSTALL  Makefile.am  README  configure.ac  frogs.py  frogsutils.py  pc.in  poloka-simphot.pc.in  wscript
doc/: Makefile.am  poloka_to_simphot.sh
poloka/: Makefile.am  array4d.cc  array4d.h  calibratedstar.cc  calibratedstar.h  imagepsfserver.cc  lightcurvefile.cc  lightcurvefile.h  lightcurvesyntaxerror.h  model.cc  model.h  objecttofit.cc  objecttofit.h  pmstar.cc  pmstar.h  resampler.cc  rimage.h  simphotfit.cc  simphotfit.h  vignette.cc  vignette.h
psf/: analyticpsf.cc  imagepsf.cc  wscript
simphot/: wscript
src/: apersestar.cc  apersestar.h  globalval.cc  globalval.h  gtransfo.cc  imagematch.cc  imageutils.h  model.cc  pmstar.cc  pmstar.h  reducedimage.cc  reducedimage.h  reducedutils.cc  sextractor_box.cc  simphotfit.cc  simphotfit.h  starmatch.cc  swarpstack.cc  transformedimage.cc  transformedimage.h  vignette.cc  vignette.h  wscript
src_base/: fitstoad.cc
tools/: Makefile.am  mklc.cc  pka-lc.cc  wscript
utils/: astrom.cc  wscript
